--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -85,7 +85,7 @@
         Navigation
       </h3>
       <nav>
-        <a href="#">Analina</a>
+        <a href="#">Home Page</a>
         <a href="#">About me</a>
         <a href="#">Contact</a>
       </nav>
@@ -123,29 +123,30 @@
     <h2>
       Content
     </h2>
-    <h1>Analina</h1>
-    <h2>Software Development BS (Student)</h2>
+    <h3>Home Page</h3>
+    <h2>Analina Del Vecchio</h2>
+    <h3>Software Development BS (Student)</h2>
     <h3>Some projects</h3>
-    <h2>Doma Bohemian Furniture</h2>
+    <h3>Doma Bohemian Furniture</h3>
     <p>
       Year of Creation: 2020<br>
       Project description: Local online store where furniture and home decoration products are sold.
     </p>
-    <h2>My Hair by Sandra</h2>   
+    <h3>My Hair by Sandra</h3>   
     <p>
     Year of creation: 2021<br>
     Project description: Beauty salon based in Panama where hair products and professional services are sold.</p>
-    <h2>Your Designer Friends</h2>
+    <h3>Your Designer Friends</h3>
     <p>
     Year of creation: 2021<br>
     Project description: Company dedicated to providing brand design, tutoring and software development services.</p>
     </p>
-    <h3>Images for the Analina page</h3>
+    <h3>Images for the Home page</h3>
       <img src="images/analina_nielsen.png" alt="anita nielsen"><br>
       <img src="images/doma.png" alt="doma bohemian furniture"><br>
       <img src="images/my_hair.png" alt="my hair by sandra"><br>
       <img src="images/your_design.png" alt="your designer friends">
-    <h3>About me</h3>
+    <h2>About me</h2>
     <p>
       Hello, I'm Analina (some call me cookie). I like to make connections between people, this is why I decided to study Software Development.<br> 
       In some way I feel that we are all connected and that there is more than one person willing to give you what you need.<br>
@@ -156,8 +157,8 @@
     <h3>Images for the About me Page</h3>
       <img src="images/anita.png" alt="anita"><br>
       <img src="images/cookie_4.png" alt="cookie 4">
-    <h3>[Page 3]</h3>
-    <h3>Contact</h3>
+    <h2>Contact</h2>
+    <h3>Contact Form</h3>
     <p>
       Full Name* First Name / Last Name <br>
       E-mail* <br>
