--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -98,7 +98,7 @@
     </h2>
     <div class="sitemap">
       <div class="sm-home">
-        Analina
+        Home Page
       </div>
       <div class="sm-page2">
         About me <!-- change this -->
