--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -125,7 +125,7 @@
     </h2>
     <h3>Home Page</h3>
     <h2>Analina Del Vecchio</h2>
-    <h3>Software Development BS (Student)</h2>
+    <h3>Software Development BS (Student)</h3>
     <h3>Some projects</h3>
     <h3>Doma Bohemian Furniture</h3>
     <p>
@@ -135,11 +135,12 @@
     <h3>My Hair by Sandra</h3>   
     <p>
     Year of creation: 2021<br>
-    Project description: Beauty salon based in Panama where hair products and professional services are sold.</p>
+    Project description: Beauty salon based in Panama where hair products and professional services are sold.
+    </p>
     <h3>Your Designer Friends</h3>
     <p>
     Year of creation: 2021<br>
-    Project description: Company dedicated to providing brand design, tutoring and software development services.</p>
+    Project description: Company dedicated to providing brand design, tutoring and software development services.
     </p>
     <h3>Images for the Home page</h3>
       <img src="images/analina_nielsen.png" alt="anita nielsen"><br>
