--- a/challenge_2/index.html
+++ b/challenge_2/index.html
@@ -6,17 +6,17 @@
     <title>Challenge 2</title>
     <link rel="stylesheet" href="styles/styles-challenge-two.css">
 </head>
-<body>
-    <div id="content">
+<body id="Content">
+    <div>
         <header>
             <img class="imagen-cabecera" src="https://byui-wdd.github.io/wdd130/ice/w05_circles.jpg" alt="imag-p">
         </header>
         <main>
-            <ul class="flex-container">
-                <li class="flex-item"><img class="circle" src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_desk.jpg" alt="desk"></li>
-                <li class="flex-item"><img class="circle" src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_graphic.png" alt="graphic"></li>
-                <li class="flex-item"><img class="circle" src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_person.jpg" alt="person"></li>
-            </ul>
+            <div class="container">
+                <div><img class="circle" src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_desk.jpg" alt="desk"></div>
+                <div><img class="circle" src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_graphic.png" alt="graphic"></div>
+                <div><img class="circle" src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_person.jpg" alt="person"></div>
+            </div>
         </main>
     </div>
 </body>
