--- a/challengue_4/index.html
+++ b/challengue_4/index.html
@@ -6,8 +6,10 @@
   <link type="text/css" rel="stylesheet" href="styles/styles_challengue_4.css">
 </head>
 <body>
-  <div class="contenedor">    
-    <img class="imagen" src="https://byui-wdd.github.io/wdd130/ice/w09_ice_img.jpg" alt="city scape">
+  <div class="contenedor">
+    <div class="imagen_contenedor">
+        <img class="image_p" src="https://byui-wdd.github.io/wdd130/ice/w09_ice_img.jpg" alt="city scape">
+    </div>    
     <div class="texto">
         <h3>3 weeks ago</h3>
         <h1>Post Three</h1>
