--- a/challengue_4/index.html
+++ b/challengue_4/index.html
@@ -11,9 +11,18 @@
         <img class="image_p" src="https://byui-wdd.github.io/wdd130/ice/w09_ice_img.jpg" alt="city scape">
     </div>    
     <div class="texto">
-        <h3>3 weeks ago</h3>
+        <p>3 weeks ago</p>
         <h1>Post Three</h1>
-    </div>  
-  </div>
+        <h3>This would be some text to go here and tell you about this awesome article that they should definitely read. This would be some text to go here and tell you about this awesome article that they should definitely read This would be some text to go here</h3>
+    </div>        
+    <div class="read">
+        <h2>5 <br>READ</h2>
+    </div>
+    <div class="views">
+        <h2>2031 <br>VIEWS</h2>
+    </div>
+    <div class="comment">
+        <h2>15 <br>COMMENTS</h2> 
+    </div> 
 </body>
 </html>
