--- a/challengue_4/index.html
+++ b/challengue_4/index.html
@@ -6,23 +6,26 @@
   <link type="text/css" rel="stylesheet" href="styles/styles_challengue_4.css">
 </head>
 <body>
-  <div class="contenedor">
-    <div class="imagen_contenedor">
-        <img class="image_p" src="https://byui-wdd.github.io/wdd130/ice/w09_ice_img.jpg" alt="city scape">
-    </div>    
-    <div class="texto">
-        <p>3 weeks ago</p>
-        <h1>Post Three</h1>
-        <h3>This would be some text to go here and tell you about this awesome article that they should definitely read. This would be some text to go here and tell you about this awesome article that they should definitely read This would be some text to go here</h3>
-    </div>        
-    <div class="read">
-        <h2>5 <br>READ</h2>
-    </div>
-    <div class="views">
-        <h2>2031 <br>VIEWS</h2>
-    </div>
-    <div class="comment">
-        <h2>15 <br>COMMENTS</h2> 
-    </div> 
+    <div class="contenedor">
+        <div class="imagen_contenedor">
+            <img class="image_p" src="https://byui-wdd.github.io/wdd130/ice/w09_ice_img.jpg" alt="city scape">
+        </div>    
+        <div class="texto">
+            <p>3 weeks ago</p>
+            <h1>Post Three</h1>
+            <h3>This would be some text to go here and tell you about this awesome article that they should definitely read. This would be some text to go here and tell you about this awesome article that they should definitely read This would be some text to go here</h3>
+        </div>
+        <div class="read">       
+            <div class="grid-item">
+                <h2>5 <br>READ</h2>
+            </div>
+            <div class="grid-item">
+                <h2>2031 <br>VIEWS</h2>
+            </div>
+            <div class="grid-item">
+                <h2>15 <br>COMMENTS</h2> 
+            </div>
+        </div>
+    </div>  
 </body>
 </html>
