--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -39,21 +39,21 @@
                 <img class="card-img" src="images/Leavenworth.png" alt="leavenworth">
                 <h2>Leavenworth</h2>
                 <div class="button-box">
-                    <a class="river" href="#">More...</a>
+                    <a class="river" href="https://leavenworth.org/" target="_blank">More...</a>
                 </div>
             </section>
             <section class="rivers-card">
                 <img class="card-img" src="images/skykomish_lake.png" alt="skykomish">
                 <h2>Skykomish</h2>
                 <div class="button-box">
-                    <a class="river" href="#">More...</a>
+                    <a class="river" href="https://skykomishwa.gov/" target="_blank">More...</a>
                 </div>
             </section>
             <section class="rapids-card">
                 <img class="card-img" src="images/wenatchee_river.png" alt="wenatchee">
                 <h2>Wenatchee</h2>
                 <div class="button-box">
-                    <a class="river" href="#">More...</a>
+                    <a class="river" href="https://www.wenatcheewa.gov/?locale=en" target="_blank">More...</a>
                 </div>
             </section>
             <div id="background"></div>
