--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -35,25 +35,25 @@
             <H2>Most Popular Rafting Travel Destination in Washington State</H2>
         </section>
         <main class="home-grid">
-            <section class="camping-card">
+            <section class="leavenworth-card">
                 <img class="card-img" src="images/Leavenworth.png" alt="leavenworth">
                 <h2>Leavenworth</h2>
                 <div class="button-box">
-                    <a class="river" href="https://leavenworth.org/" target="_blank">More...</a>
+                    <a class="more-button" href="https://leavenworth.org/" target="_blank">More...</a>
                 </div>
             </section>
-            <section class="rivers-card">
+            <section class="skykomish-card">
                 <img class="card-img" src="images/skykomish_lake.png" alt="skykomish">
                 <h2>Skykomish</h2>
                 <div class="button-box">
-                    <a class="river" href="https://skykomishwa.gov/" target="_blank">More...</a>
+                    <a class="more-button" href="https://skykomishwa.gov/" target="_blank">More...</a>
                 </div>
             </section>
-            <section class="rapids-card">
+            <section class="wenatchee-card">
                 <img class="card-img" src="images/wenatchee_river.png" alt="wenatchee">
                 <h2>Wenatchee</h2>
                 <div class="button-box">
-                    <a class="river" href="https://www.wenatcheewa.gov/?locale=en" target="_blank">More...</a>
+                    <a class="more-button" href="https://www.wenatcheewa.gov/?locale=en" target="_blank">More...</a>
                 </div>
             </section>
             <div id="background"></div>
