--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -31,10 +31,9 @@
                 </div>
             </section>
         </div>
-        <section id="caption-msg">
-            <H2>Most Popular Rafting Travel Destination in Washington State</H2>
-        </section>
-        <main class="home-grid">
+        <main class="trip-grid">
+            <section class="caption-msg"><H2>Most Popular Rafting Travel Destination in Washington State</H2>
+            </section>
             <section class="leavenworth-card">
                 <img class="card-img" src="images/Leavenworth.png" alt="leavenworth">
                 <h2>Leavenworth</h2>
@@ -56,12 +55,6 @@
                     <a class="more-button" href="https://www.wenatcheewa.gov/?locale=en" target="_blank">More...</a>
                 </div>
             </section>
-            <div id="background"></div>
-            <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="mountains">
-            <section class="msg">
-                <h2>Much More Than a Raft Trip</h2>
-                <p>Have the opportunity to enjoy the wildlife, beautiful landscapes and meet new friends.</p>
-                <a class='join' href="#">Join Us</a>
             </section>
         </main>
         <footer>
