--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -55,6 +55,12 @@
                     <a class="more-button" href="https://www.wenatcheewa.gov/?locale=en" target="_blank">More...</a>
                 </div>
             </section>
+            <section class="caption-msg-2"><H2>River Essential For Any Rafting Trip</H2>
+            </section>
+            <section class="river-essentials"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium consequuntur quod, aut sequi ex fugit at, animi consectetur eos esse officiis deserunt qui debitis voluptate molestiae, eius voluptates. Accusantium, consectetur!</p>
+            </section>
+            <section class="essential-image">
+                <img src="https://byui-wdd.github.io/wdd130/resources/images/rafting22_600.jpg" alt="essentials">
             </section>
         </main>
         <footer>
