--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -57,6 +57,9 @@
             </section>
             <section class="caption-msg-2"><H2>River Essential For Any Rafting Trip</H2>
             </section>
+            <section class="image-essentials">
+                <img class="image-e" src="https://byui-wdd.github.io/wdd130/resources/images/rafting22_600.jpg" alt="image-essentials-1">
+            </section>
             <section class="river-essentials"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium consequuntur quod, aut sequi ex fugit at, animi consectetur eos esse officiis deserunt qui debitis voluptate molestiae, eius voluptates. Accusantium, consectetur!</p>
             </section>
         </main>
