--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,7 +14,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="trips.html">Trips</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="#">Contact Us</a>
             </nav>
