--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -60,7 +60,8 @@
             <section class="image-essentials">
                 <img class="image-e" src="https://byui-wdd.github.io/wdd130/resources/images/rafting22_600.jpg" alt="image-essentials-1">
             </section>
-            <section class="river-essentials"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium consequuntur quod, aut sequi ex fugit at, animi consectetur eos esse officiis deserunt qui debitis voluptate molestiae, eius voluptates. Accusantium, consectetur!</p>
+            <section class="river-essentials">
+                <p>Packing the right equipment will make sure you will enjoy your rafting adventure. We give you some essential tips on what to wear. Don't forget your helmet, from the snowmelt of the west to the creeks of the east, a high quality helmet will help protect your head no matter how rowdy the river gets. Whether you're just starting out paddling or have years of experience on the water, you'll want to invest in a comfortable, durable helmet. <a class="negrita" href="https://www.wikihow.com/What-to-Wear-White-Water-Rafting" target="_blank">Read more...</a></p>
             </section>
         </main>
         <footer>
