--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -38,7 +38,7 @@
                 <img class="card-img" src="images/Leavenworth.png" alt="leavenworth">
                 <h2>Leavenworth</h2>
                 <div class="button-box">
-                    <a class="more-button" href="https://leavenworth.org/" target="_blank">More...</a>
+                    <a class="more-button" href="images/leavenworth.png" target="_blank">More...</a>
                 </div>
             </section>
             <section class="skykomish-card">
