--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -57,12 +57,12 @@
             </section>
             <section class="caption-msg-2"><H2>River Essential For Any Rafting Trip</H2>
             </section>
-            <section class="image-essentials">
+            <div class="image-essentials">
                 <img class="image-e" src="https://byui-wdd.github.io/wdd130/resources/images/rafting22_600.jpg" alt="image-essentials-1">
-            </section>
-            <section class="river-essentials">
+            </div>
+            <div class="river-essentials">
                 <p>Packing the right equipment will make sure you will enjoy your rafting adventure. We give you some essential tips on what to wear. Don't forget your helmet, from the snowmelt of the west to the creeks of the east, a high quality helmet will help protect your head no matter how rowdy the river gets. Whether you're just starting out paddling or have years of experience on the water, you'll want to invest in a comfortable, durable helmet. <a class="negrita" href="https://www.wikihow.com/What-to-Wear-White-Water-Rafting" target="_blank">Read more...</a></p>
-            </section>
+            </div>
         </main>
         <footer>
             <p>Raft Aventures &copy; 2023 - Analina Del Vecchio</p>
