--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -35,7 +35,7 @@
             <section class="caption-msg"><H2>Most Popular Rafting Travel Destination in Washington State</H2>
             </section>
             <section class="leavenworth-card">
-                <img class="card-img" src="images/Leavenworth.png" alt="leavenworth">
+                <img class="card-img" src="images/leavenworth.png" alt="leavenworth">
                 <h2>Leavenworth</h2>
                 <div class="button-box">
                     <a class="more-button" href="https://leavenworth.org/" target="_blank">More...</a>
