--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -55,7 +55,7 @@
                     <a class="more-button" href="https://www.wenatcheewa.gov/?locale=en" target="_blank">More...</a>
                 </div>
             </section>
-            <section class="caption-msg-2"><H2>River Essential For Any Rafting Trip</H2>
+            <section class="caption-msg-2"><H2>River Essentials For Any Rafting Trip</H2>
             </section>
             <div class="image-essentials">
                 <img class="image-e" src="https://byui-wdd.github.io/wdd130/resources/images/rafting22_600.jpg" alt="image-essentials-1">
