--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -183,21 +183,21 @@
     </h2>
     <p>
       Create three wireframes for your site. One for each page and list them here</p>
-    <h3>Home</h3>
+    <h3>Home Page</h3>
     <p>         
       [Any additional details about home that the wireframe does not make clear]
     </p>
-    <img src="images/coming_soon.png" alt="home page wireframe">
-    <h3>[Page 2]</h3>
+    <img src="images/home-wireframe.png" alt="home page wireframe">
+    <h3>About Pages</h3>
     <p>         
       [Any additional details about page 2 that the wireframe does not make clear]
     </p>
-    <img src="images/coming_soon.png" alt="page 2 wireframe">
-    <h3>[Page 3]</h3>
+    <img src="images/about-wireframe.png" alt="about page wireframe">
+    <h3>Contact Page</h3>
     <p>         
       [Any additional details about page 3 that the wireframe does not make clear]
     </p>
-    <img src="images/coming_soon.png" alt="page 3 wireframe">
+    <img src="images/contact-wireframe.png" alt="contact page wireframe">
     </section>
     </main>
   </body>
