--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,7 +16,7 @@
                 <a href="index.html">Home</a>
                 <a href="trips.html">Trips</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="#">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
@@ -57,8 +57,8 @@
         </main>
         <footer>
             <p>Raft Aventures &copy; 2023 - Analina Del Vecchio</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="#">Contact Us</a></p>
+            <p><a href="site-plan-rafting.html" target="_blank">Site Plan</a></p>
+            <p><a href="contact.html" target="_blank">Contact Us</a></p>
             <div class="social">
                 <a href="https://www.facebook.com/" target="_blank">
                     <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
