--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -55,7 +55,7 @@
                     // stop the form from doing the default action.
                     e.preventDefault();
                     // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
-                    feedbackElement.innerHTML = 'Hello '+ formElement.user_name.value +'! Thank you for your message. We will get back with you as soon as possible!';
+                    feedbackElement.innerHTML = 'Hello '+ formElement.user_name.value +'! Thank you for your message 🙂. We will get back with you as soon as possible!';
                     // make the feedback element visible.
                     feedbackElement.style.display = "block";
                     // add a class to move everything down so our message doesn't cover it.
