--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -29,11 +29,11 @@
                 <ul>
                     <li>
                         <label for="name">Name:</label>
-                        <input type="text" id="name" name="user_name" />
+                        <input type="text" id="name" name="user_name">
                     </li>
                     <li>
                         <label for="mail">E-mail:</label>
-                        <input type="email" id="mail" name="user_mail" />
+                        <input type="email" id="mail" name="user_mail">
                     </li>
                     <li>
                         <label for="msg">Message:</label>
