--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,6 +26,7 @@
         </div>
         <main>
             <form action="/my-handling-form-page" method="post">
+                <legend>📩</legend>
                 <ul>
                     <li>
                         <label for="name">Name:</label>
