--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="images/cookie.png" alt="Analina Logo">
-        </a>
-        <nav>
-            <a href="index.html">Analina</a>
-            <a href="about-me.html">About Me</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+    <div id="content"></div>
+        <header>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images/cookie.png" alt="Analina Logo">
+            </a>
+            <nav>
+                <a href="index.html">Analina</a>
+                <a href="about-me.html">About Me</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+    </div>
 </body>
 </html>
