--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -18,6 +18,23 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
+        <footer>
+            <p><a href="site-plan-rafting.html" target="_blank">Email</a></p>
+            <div class="social">
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com/" target="_blank">
+                    <img src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
+                </a>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
