--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -18,20 +18,28 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
-        <footer>
-            <p><a href="site-plan-rafting.html" target="_blank">Email</a></p>
-            <div class="social">
+        <footer class="footer-grid">
+            <div class="footer-1-element">
+                <p><a href="site-plan-rafting.html" target="_blank">Send me an email</a></p>
+            </div>
+            <div class="footer-2-element">
                 <a href="https://www.facebook.com/" target="_blank">
-                    <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
+                    <img class="social-icon" src="images/facebook.png" alt="fb icon">
                 </a>
+            </div>
+            <div class="footer-3-element">
                 <a href="https://twitter.com/" target="_blank">
-                    <img src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png" alt="twitter icon">
+                    <img class="social-icon" src="images/email.png" alt="twitter icon">
                 </a>
+            </div>
+            <div class="footer-4-element">
                 <a href="https://www.instagram.com/" target="_blank">
-                    <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
+                    <img class="social-icon" src="images/github.png" alt="instagram icon">
                 </a>
+            </div>
+            <div class="footer-5-element">
                 <a href="https://www.instagram.com/" target="_blank">
-                    <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
+                    <img class="social-icon" src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
