--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -44,7 +44,7 @@
                 <h1>Soft Skills</h1>
             </div>
             <div class="main-7-element-about-me">
-                <img src="images/cookie_4.png" alt="cookie-4">
+                <img class="img-gatito" src="images/cookie_4.png" alt="cookie-4">
             </div>
         </main>
         <footer class="footer-grid">
