--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="wwr/index.html">White Water Rafting Website</a>
             <a href="positioning_activity/positioning.html">Positioning Activity</a>
             <a href="analina/site_plan_analina.html">Analina Site Plan</a>
+            <a href="analina/index.html">Personal Web Site</a>
             <a href="challenge_1/index.html">Challengue 1</a>
             <a href="challenge_2/index.html">Challengue 2</a>
             <a href="challengue_3/index.html">Challengue 3</a>
