--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -23,7 +23,7 @@
                 <h1>About Me </h1>
             </div>
             <div class="main-2-element-about-me">
-                <p><a href="site-plan-rafting.html" target="_blank">Send me an email</a></p>
+                <p><a href="mailto:yourdesignerfriends@gmail.com" target="_blank">Send me an email</a></p>
             </div>
             <div class="main-3-element-about-me">
                 <img class="img-about-me" src="images/anita.png" alt="anita">
@@ -49,7 +49,7 @@
         </main>
         <footer class="footer-grid">
             <div class="footer-1-element">
-                <p><a href="site-plan-rafting.html" target="_blank">Send me an email</a></p>
+                <p><a href="mailto:yourdesignerfriends@gmail.com" target="_blank">Send me an email</a></p>
             </div>
             <div class="footer-2-element">
                 <a href="https://www.facebook.com/" target="_blank">
@@ -57,13 +57,13 @@
                 </a>
             </div>
             <div class="footer-3-element">
-                <a href="https://twitter.com/" target="_blank">
-                    <img class="social-icon" src="images/email.png" alt="twitter icon">
+                <a href="mailto:yourdesignerfriends@gmail.com" target="_blank">
+                    <img class="social-icon" src="images/email.png" alt="email icon">
                 </a>
             </div>
             <div class="footer-4-element">
-                <a href="https://www.instagram.com/" target="_blank">
-                    <img class="social-icon" src="images/github.png" alt="instagram icon">
+                <a href="https://github.com/" target="_blank">
+                    <img class="social-icon" src="images/github.png" alt="github icon">
                 </a>
             </div>
             <div class="footer-5-element">
