--- a/analina/contact.html
+++ b/analina/contact.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <div id="content"></div>
+        <header>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images/cookie.png" alt="Analina Logo">
+            </a>
+            <nav>
+                <a href="index.html">Analina</a>
+                <a href="about-me.html">About Me</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+        <main>
+        </main>
+        <footer class="footer-grid">
+            <div class="footer-1-element">
+                <p><a href="mailto:yourdesignerfriends@gmail.com" target="_blank">Send me an email</a></p>
+            </div>
+            <div class="footer-2-element">
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img class="social-icon" src="images/facebook.png" alt="fb icon">
+                </a>
+            </div>
+            <div class="footer-3-element">
+                <a href="mailto:yourdesignerfriends@gmail.com" target="_blank">
+                    <img class="social-icon" src="images/email.png" alt="email icon">
+                </a>
+            </div>
+            <div class="footer-4-element">
+                <a href="https://github.com/" target="_blank">
+                    <img class="social-icon" src="images/github.png" alt="github icon">
+                </a>
+            </div>
+            <div class="footer-5-element">
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img class="social-icon" src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
