--- a/analina/index.html
+++ b/analina/index.html
@@ -60,7 +60,7 @@
                 <p><a href="https://domabohemianfurniture.com/" target="_blank">See More</a></p>
             </div>
             <div class="main-10-element-home">
-                <p><a href="myhairbysandra.com" target="_blank">See More</a></p>
+                <p><a href="https://myhairbysandra.com/" target="_blank">See More</a></p>
             </div>
             <div class="main-11-element-home">
                 <p><a href="https://yourdesignerfriends.com/" target="_blank">See More</a></p>
