--- a/analina/index.html
+++ b/analina/index.html
@@ -26,6 +26,7 @@
                 <h2>Analina Del Vecchio</h2>
                 <h3>Software Development BS (Student)</h3>
                 <h3>Some projects</h3>
+            </div>
             <div class="main-3-element-home">
                 <img class="img-projects" src="images/doma.png" alt="doma">
             </div>
