--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <div id="content"></div>
+    <div id="content">
         <header>
             <a id="logo_link" href="index.html">
                 <img class="logo" src="images/cookie.png" alt="Analina Logo">
