--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -49,7 +49,7 @@
         </main>
         <footer class="footer-grid">
             <div class="footer-1-element">
-                <p><a href="mailto:yourdesignerfriends@gmail.com" target="_blank">Send me an email</a></p>
+                <p><a href="site_plan_analina.html" target="_blank">Site Plan</a></p>
             </div>
             <div class="footer-2-element">
                 <a href="https://www.facebook.com/" target="_blank">
