--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <a href="challenge_1/index.html">Challengue 1</a>
             <a href="challenge_2/index.html">Challengue 2</a>
             <a href="challengue_3/index.html">Challengue 3</a>
+            <a href="challengue_4/">Challenge 4</a>
+            <a href="challenge-5/">Challenge 5</a>
         </nav>
     </section>
     <hr>
