--- a/challenge-5/index.html
+++ b/challenge-5/index.html
@@ -7,5 +7,31 @@
     <link rel="stylesheet" href="styles/style-challenge-5.css">
 </head>
 <body>
+    <div id="content">
+        <div class="poem">
+            <section class="block1">
+              <h2>The Cataract of Lodore</h2>
+              <p>...The cataract strong</p>
+              <p> Then plunges along,</p>
+              <p>Striking and raging</p>
+            </section>
+            <section class="block2">
+              <p>As if a war waging Its caverns and rocks among;</p>
+              <p> Rising and leaping, Sinking and creeping,</p>
+              <p> Swelling and sweeping, Showering and springing,</p>
+            </section>
+            <section class="block3">
+              <p> Flying and flinging, Writhing and ringing, </p>
+              <p>Eddying and whisking, Spouting and frisking,</p>
+              <p> Turning and twisting,</p> 
+           </section>
+            <section class="block4">
+              <p>Around and around With endless rebound:</p>
+              <p> Smiting and fighting, A sight to delight in;</p>
+              <p> Confounding, astounding, Dizzying and deafening</p>
+              <p> the ear with its sound.</p>
+            </section>
+          </div>
+    </div>
 </body>
 </html>
