--- a/analina/index.html
+++ b/analina/index.html
@@ -31,10 +31,10 @@
                 <img class="img-projects" src="images/doma.png" alt="doma">
             </div>
             <div class="main-4-element-home">
-                <img class="img-projects" src="images/my_hair.png" alt="my_hair">
+                <img class="img-projects" src="images/my-hair.png" alt="my_hair">
             </div>
             <div class="main-5-element-home">
-                <img class="img-projects" src="images/your_design.png" alt="your_design">
+                <img class="img-projects" src="images/your-design.png" alt="your_design">
             </div>
             <div class="main-6-element-home">
                 <h3>Doma Bohemian Furniture</h3>
