--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -144,9 +144,9 @@
     </p>
     <h3>Images for the Home page</h3>
       <img src="images/analina_nielsen.png" alt="anita nielsen"><br>
-      <img src="images/doma.png" alt="doma bohemian furniture"><br>
-      <img src="images/my_hair.png" alt="my hair by sandra"><br>
-      <img src="images/your_design.png" alt="your designer friends">
+      <img class="img-projects" src="images/doma.png" alt="doma bohemian furniture"><br>
+      <img class="img-projects" src="images/my-hair.png" alt="my hair by sandra"><br>
+      <img class="img-projects" src="images/your-design.png" alt="your designer friends">
     <h2>About Me Page</h2>
     <p>
       Hello, I'm Analina (some call me cookie). I like to make connections between people, this is why I decided to study Software Development.<br> 
