--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -130,7 +130,7 @@
     <h3>Doma Bohemian Furniture</h3>
     <p>
       Year of Creation: 2020<br>
-      Project description: Local online store where furniture and home decoration products are sold.
+      Project description: Local online store based in USA where furniture and home decoration products are sold.
     </p>
     <h3>My Hair by Sandra</h3>   
     <p>
