--- a/analina/index.html
+++ b/analina/index.html
@@ -64,7 +64,7 @@
                 </p>            
             </div>
             <div class="main-11-element-home">
-                <p><a class="img-projects" href="https://yourdesignerfriends.com/" target="_blank">See More</a></p>
+                <p><a href="https://yourdesignerfriends.com/" target="_blank">See More</a></p>
             </div>
         </main>
         <footer class="footer-grid">
