--- a/analina/index.html
+++ b/analina/index.html
@@ -64,31 +64,15 @@
                 <a href="https://yourdesignerfriends.com/" target="_blank">See More</a>
             </div>
         </main>
-        <footer class="footer-grid">
-            <div class="footer-1-element">
-                <p><a href="site_plan_analina.html" target="_blank">Site Plan</a></p>
-            </div>
-            <div class="footer-2-element">
-                <a href="https://www.facebook.com/" target="_blank">
-                    <img class="social-icon" src="images/facebook.png" alt="fb icon">
-                </a>
-            </div>
-            <div class="footer-3-element">
-                <a href="mailto:yourdesignerfriends@gmail.com" target="_blank">
-                    <img class="social-icon" src="images/email.png" alt="email icon">
-                </a>
-            </div>
-            <div class="footer-4-element">
-                <a href="https://github.com/" target="_blank">
-                    <img class="social-icon" src="images/github.png" alt="github icon">
-                </a>
-            </div>
-            <div class="footer-5-element">
-                <a href="https://www.instagram.com/" target="_blank">
-                    <img class="social-icon" src="images/instagram.png" alt="instagram icon">
-                </a>
+        <footer>
+            <p><a href="site_plan_analina.html" target="_blank">Site Plan</a></p>
+            <div class="social">
+                <a href="https://www.facebook.com/" target="_blank"><img class="social-icon" src="images/facebook.png" alt="fb icon"></a>
+                <a href="https://github.com/" target="_blank"><img class="social-icon" src="images/github.png" alt="github icon"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img class="social-icon" src="images/instagram.png" alt="instagram icon"></a>
             </div>
         </footer>
+        <p class="copy">&copy; 2023 - Analina Del Vecchio</p>
     </div>
 </body>
 </html>
