--- a/analina/index.html
+++ b/analina/index.html
@@ -64,15 +64,21 @@
                 <a href="https://yourdesignerfriends.com/" target="_blank">See More</a>
             </div>
         </main>
-        <footer>
-            <p><a href="site_plan_analina.html" target="_blank">Site Plan</a></p>
-            <div class="social">
-                <a href="https://www.facebook.com/" target="_blank"><img class="social-icon" src="images/facebook.png" alt="fb icon"></a>
-                <a href="https://github.com/" target="_blank"><img class="social-icon" src="images/github.png" alt="github icon"></a>
-                <a href="https://www.instagram.com/" target="_blank"><img class="social-icon" src="images/instagram.png" alt="instagram icon"></a>
+        <footer class="footer-grid">
+            <div class="footer-1">
+                <p><a href="site_plan_analina.html" target="_blank">Site Plan</a></p>
+            </div>
+            <div class="footer-2">
+                <div class="social">
+                    <a href="https://www.facebook.com/" target="_blank"><img class="social-icon" src="images/facebook.png" alt="fb icon"></a>
+                    <a href="https://github.com/" target="_blank"><img class="social-icon" src="images/github.png" alt="github icon"></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img class="social-icon" src="images/instagram.png" alt="instagram icon"></a>
+                </div>
+            </div>
+            <div class="footer-3">
+                <p class="copy">&copy; 2023 - Analina Del Vecchio</p>
             </div>
         </footer>
-        <p class="copy">&copy; 2023 - Analina Del Vecchio</p>
     </div>
 </body>
 </html>
