--- a/analina/index.html
+++ b/analina/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <div id="content">
-        <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/cookie.png" alt="Analina Logo">
-            </a>
-            <nav>
-                <a href="index.html">Analina</a>
-                <a href="about-me.html">About Me</a>
-                <a href="contact.html">Contact</a>
-            </nav>
+        <header class="header-grid">
+            <div class="header-1">
+                <nav>
+                    <a href="index.html">Analina</a>
+                    <a href="about-me.html">About Me</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
+            <div class="header-2">
+                <a id="logo_link" href="index.html"><img class="logo" src="images/cookie.png" alt="Analina Logo"></a>
+            </div>   
         </header>
         <main class="main-home">
             <div class="main-1-element-home">
