--- a/analina/index.html
+++ b/analina/index.html
@@ -11,9 +11,9 @@
         <header class="header-grid">
             <div class="header-1">
                 <nav>
-                    <a href="index.html">Analina</a>
-                    <a href="about-me.html">About Me</a>
-                    <a href="contact.html">Contact</a>
+                    <a class="a-1" href="index.html">Analina Del Vecchio</a>
+                    <a class="a-2" href="about-me.html">About Me</a>
+                    <a class="a-3" href="contact.html">Contact</a>
                 </nav>
             </div>
             <div class="header-2">
@@ -22,8 +22,7 @@
         </header>
         <main class="main-home">
             <div class="main-1-element-home">
-                <h2>Analina Del Vecchio</h2>
-                <h3>Software Development BS (Student)</h3>
+                <h2>Software Development BS (Student)</h2>
                 <h3>Some projects</h3>
             </div>
             <div class="main-2-element-home">
