--- a/analina/index.html
+++ b/analina/index.html
@@ -22,46 +22,49 @@
         </header>
         <main class="main-home">
             <div class="main-1-element-home">
+                <img class="imagen-main" src="images/screen.png" alt="hello">
+            </div>
+            <div class="main-2-element-home">
                 <h2>Software Development BS (Student)</h2>
                 <h3>Some projects</h3>
             </div>
-            <div class="main-2-element-home">
+            <div class="main-3-element-home">
                 <img class="img-projects" src="images/doma.png" alt="doma">
             </div>
-            <div class="main-3-element-home">
+            <div class="main-4-element-home">
                 <h3>Doma Bohemian Furniture</h3>
                 <p>
                   Year of Creation: 2020<br>
                   Project description: Local online store based in USA where furniture and home decoration products are sold.
                 </p>
             </div>
-            <div class="main-4-element-home">
+            <div class="main-5-element-home">
                 <a href="https://domabohemianfurniture.com/" target="_blank">See More</a>
             </div>
-            <div class="main-5-element-home">
+            <div class="main-6-element-home">
                 <img class="img-projects" src="images/my-hair.png" alt="my_hair">
             </div>
-            <div class="main-6-element-home">
+            <div class="main-7-element-home">
                 <h3>My Hair by Sandra</h3>   
                 <p>
                 Year of creation: 2021<br>
                 Project description: Beauty salon based in Panama where hair products and professional services are sold.
                 </p>            
             </div>
-            <div class="main-7-element-home">
+            <div class="main-8-element-home">
                 <a href="https://myhairbysandra.com/" target="_blank">See More</a>
             </div>
-            <div class="main-8-element-home">
+            <div class="main-9-element-home">
                 <img class="img-projects" src="images/your-design.png" alt="your_design">
             </div>
-            <div class="main-9-element-home">
+            <div class="main-10-element-home">
                 <h3>Your Designer Friends</h3>
                 <p>
                 Year of creation: 2021<br>
                 Project description: Company dedicated to providing brand design, tutoring and software development services.
                 </p>            
             </div>
-            <div class="main-10-element-home">
+            <div class="main-11-element-home">
                 <a href="https://yourdesignerfriends.com/" target="_blank">See More</a>
             </div>
         </main>
