--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -124,8 +124,7 @@
       Content
     </h2>
     <h3>Home Page</h3>
-    <h2>Analina Del Vecchio</h2>
-    <h3>Software Development BS (Student)</h3>
+    <h2>Software Development BS (Student)</h2>
     <h3>Some projects</h3>
     <h3>Doma Bohemian Furniture</h3>
     <p>
@@ -143,7 +142,7 @@
     Project description: Company dedicated to providing brand design, tutoring and software development services.
     </p>
     <h3>Images for the Home page</h3>
-      <img src="images/analina_nielsen.png" alt="anita nielsen"><br>
+      <img src="images/hello.png" alt="hello"><br>
       <img class="img-projects" src="images/doma.png" alt="doma bohemian furniture"><br>
       <img class="img-projects" src="images/my-hair.png" alt="my hair by sandra"><br>
       <img class="img-projects" src="images/your-design.png" alt="your designer friends">
