--- a/analina/index.html
+++ b/analina/index.html
@@ -22,7 +22,7 @@
         </header>
         <main class="main-home">
             <div class="main-1-element-home">
-                <img class="imagen-main" src="images/screen.png" alt="hello">
+                <img class="imagen-main" src="images/hello.png" alt="hello">
             </div>
             <div class="main-2-element-home">
                 <h2>Software Development BS (Student)</h2>
@@ -79,10 +79,10 @@
                     <a href="https://www.instagram.com/" target="_blank"><img class="social-icon" src="images/instagram.png" alt="instagram icon"></a>
                 </div>
             </div>
-            <div class="footer-3">
-                <p class="copy">&copy; 2023 - Analina Del Vecchio</p>
-            </div>
         </footer>
+        <div class="copy">
+            <p class="copy">&copy; 2023 - Analina Del Vecchio</p>
+        </div>
     </div>
 </body>
 </html>
