--- a/analina/index.html
+++ b/analina/index.html
@@ -77,6 +77,7 @@
                     <a href="https://www.facebook.com/" target="_blank"><img class="social-icon" src="images/facebook.png" alt="fb icon"></a>
                     <a href="https://github.com/" target="_blank"><img class="social-icon" src="images/github.png" alt="github icon"></a>
                     <a href="https://www.instagram.com/" target="_blank"><img class="social-icon" src="images/instagram.png" alt="instagram icon"></a>
+                    <a href="mailto:yourdesignerfriends@gmail.com" target="_blank"><img class="social-icon" src="images/email.png" alt="email icon"></a>
                 </div>
             </div>
         </footer>
